--- a/views/campgrounds/edit.ejs
+++ b/views/campgrounds/edit.ejs
@@ -1,42 +1,58 @@
 <% layout("layouts/boilerplate")%>
-    <div class="row">
-        <h1 class="text-center">Edit Campground</h1>
-        <div class="col-6 offset-3">
-            <form action="/campgrounds/<%=campground._id%>?_method=PUT" method="POST" novalidate class="validated-form">
-                <div class="mb-3">
-                    <label class="form-label" for="title">Title</label>
-                    <input class="form-control" type="text" id="title" name="campground[title]" value="<%=campground.title%>" required>
+<div class="row">
+    <h1 class="text-center">Edit Campground</h1>
+    <div class="col-6 offset-3">
+        <form action="/campgrounds/<%=campground._id%>?_method=PUT" method="POST" novalidate class="validated-form" enctype="multipart/form-data">
+            <div class="mb-3">
+                <label class="form-label" for="title">Title</label>
+                <input class="form-control" type="text" id="title" name="campground[title]" value="<%=campground.title%>" required>
+                <div class="valid-feedback">Looks good!</div>
+            </div>
+            <div class="mb-3">
+                <label class="form-label" for="location">Location</label>
+                <input class="form-control" type="text" id="location" name="campground[location]" value="<%=campground.location%>" required>
+                <div class="valid-feedback">Looks good!</div>
+            </div>
+            <div class="mb-3">
+                <label class="form-label" for="price">Campground Price</label>
+                <div class="input-group">
+                    <span class="input-group-text" id="price-label">$</span>
+                    <input type="text" class="form-control" placeholder="0" aria-label="Price (to the nearest dollar)" name="campground[price]" value="<%=campground.price%>" required>
+                    <span class="input-group-text">.00</span>
                     <div class="valid-feedback">Looks good!</div>
+                    </div>
+            </div>
+            
+            <div class="mb-3">
+                <label class="form-label" for="description">Description</label>
+                <textarea class="form-control" type="text" id="description" name="campground[description]" required ><%=campground.description%></textarea>
+                <div class="valid-feedback">Looks good!</div>
+            </div>
+            <div class="mb-3">
+                <div class="custom-file">
+                    <input type="file" class="custom-file-input" id="image" name="image" multiple onchange="document.getElementById('preview').src = window.URL.createObjectURL(this.files[0])">
+                    <label class="custom-file-label" for="customFile">Add image(s)...</label>            
                 </div>
-                <div class="mb-3">
-                    <label class="form-label" for="location">Location</label>
-                    <input class="form-control" type="text" id="location" name="campground[location]" value="<%=campground.location%>" required>
-                    <div class="valid-feedback">Looks good!</div>
-                </div>
-                <div class="mb-3">
-                    <label class="form-label" for="image">Image URL</label>
-                    <input class="form-control" type="text" id="image" name="campground[image]" value="<%=campground.image%>" required>
-                    <div class="valid-feedback">Looks good!</div>
-                </div>
-                <div class="mb-3">
-                    <label class="form-label" for="price">Campground Price</label>
-                    <div class="input-group">
-                        <span class="input-group-text" id="price-label">$</span>
-                        <input type="text" class="form-control" placeholder="0" aria-label="Price (to the nearest dollar)" name="campground[price]" value="<%=campground.price%>" required>
-                        <span class="input-group-text">.00</span>
-                        <div class="valid-feedback">Looks good!</div>
-                      </div>
-                </div>
-                
-                <div class="mb-3">
-                    <label class="form-label" for="description">Description</label>
-                    <textarea class="form-control" type="text" id="description" name="campground[description]" required ><%=campground.description%></textarea>
-                    <div class="valid-feedback">Looks good!</div>
-                </div>
+                <img class="img-fluid my-2" id="preview" width="100px"/> 
+                <p class="">Delete images: </p>
+                <div class="row row-cols-1 row-cols-md-4 g-4 mb-3">
+                <% campground.images.forEach((image, i) => { %>
+                    <div class="col">
+                        <div class="card">
+                            <img class="card-img" src="<%= image.thumbnail %>" alt="">
+                            <div class="card-img-overlay text-right pt-1 pr-0">
+                                <label class="visually-hidden" for="image-<%= i %>"></label>
+                                <input class="form-check-input" type="checkbox" name="deleteImages[]" value="<%= image.filename %>"  id="image-<%= i %>">
+                            </div>
+                        </div>
+                    </div>
+                <% }) %>
+            </div>
                 <div class="mb-3">
                     <button class="btn btn-info">Update Campground</button>
                 </div>
-            </form>
+            </div>
             <a href="/campgrounds/<%=campground._id%>">Back To Campground</a>
-        </div>
+        </form>
     </div>
+</div>
