added geocoding & map

--- a/views/campgrounds/new.ejs
+++ b/views/campgrounds/new.ejs
@@ -32,7 +32,7 @@
             <div class="mb-3">
                 <div class="custom-file">
                     <input type="file" class="custom-file-input" id="image" name="image" multiple onchange="document.getElementById('preview').src = window.URL.createObjectURL(this.files[0])">
-                    <label class="custom-file-label" for="customFile">Choose image...</label>
+                    <label class="custom-file-label" for="image">Choose image...</label>
                 </div>
                 <img class="img-fluid my-2" id="preview" width="100px"/> 
                 <div class="">
