--- a/views/campgrounds/index.ejs
+++ b/views/campgrounds/index.ejs
@@ -7,7 +7,11 @@
         <div class="card mb-3">
             <div class="row">
                 <div class="col-md-4">
+                    <%if(campground.images.length) {%>
                     <img class=" img-fluid"src="<%=campground.images[0].url%>" alt="">
+                    <% } else { %> 
+                        <img class=" img-fluid"src="https://res.cloudinary.com/dw3o86f8j/image/upload/v1619136149/YelpCamp/mcuiczu0lglmhzqhflbx.jpg" alt="">
+                    <% } %> 
                 </div>
                 <div class="col-md-8">
                     <div class="card-body">
