--- a/views/campgrounds/show.ejs
+++ b/views/campgrounds/show.ejs
@@ -3,7 +3,6 @@
 
 <div class="row">
     <div class="col-6">
-      <div id='map' style='width: 400px; height: 300px;'></div>
       <div id="campgroundCarousel" class="carousel slide" data-ride="carousel">
         <div class="carousel-inner">
             <% campground.images.forEach((img, i) => {  %>
@@ -11,7 +10,6 @@
                 <img src="<%= img.url%>" class="d-block w-100" alt="">
             </div>
             <% }) %>
-
         </div>
         <% if(campground.images.length > 1) {%>
         <a class="carousel-control-prev" href="#campgroundCarousel" role="button" data-slide="prev">
@@ -24,8 +22,8 @@
         </a>
         <% } %>
     </div>
+
       <div class="card mb-3">
-          
           <div class="card-body">
             <h5 class="card-title"><%=campground.title%></h5>
             <p class="card-text"><%=campground.description%></p>
@@ -49,6 +47,7 @@
         </div>
     </div>
     <div class="col-6">
+      <div id='map'></div>
       <% if (currentUser) {%> 
       <h2 class="mb-2">Leave a Review</h2>
           <form action="/campgrounds/<%=campground._id %>/reviews" class="mb-3 validated-form" method="POST" novalidate>
@@ -80,13 +79,11 @@
           <% for (let review of campground.reviews) { %>
             <div class="card mb-3">
               <div class="card-body">
-                <!-- <h5 class="card-title">Rating: <%=review.rating%></h5> -->
                 <h5 class="card-title"><%=review.author.username%></h5>
 
                 <p class="starability-result" data-rating="<%=review.rating%>">
                   Rated: <%= review.rating %> stars
                 </p>
-                <!-- <h6 class="card-subtitle mb-2 text-muted">By: <%=review.author.username%></h6> -->
                 <p class="card-text">"<%=review.body%>"</p>
                 <% if(currentUser && review.author.equals(currentUser._id)) { %>
                 <form action="/campgrounds/<%=campground._id%>/reviews/<%=review._id%>?_method=DELETE" method="POST">
