--- a/views/campgrounds/new.ejs
+++ b/views/campgrounds/new.ejs
@@ -1,7 +1,7 @@
 <% layout("layouts/boilerplate")%>
 <div class="row">
-    <h1 class="text-center">New Campground</h1>
     <div class="col-md-6 offset-md-3">
+        <h4 class="text-center">Add a New Campground</h4>
         <form action="/campgrounds" method="POST" novalidate class="validated-form" enctype="multipart/form-data">
             <div class="mb-3">
                 <label class="form-label" for="title">Title</label>
@@ -39,7 +39,7 @@
                     <button class="btn btn-success">Add Campground</button>
                 </div>           
             </div>
-                <a href="/campgrounds">All Campgrounds</a>  
+                <a href="/campgrounds">Back to All Campgrounds</a>  
         </form>
     </div>
 </div>
