--- a/public/stylesheets/home.css
+++ b/public/stylesheets/home.css
@@ -1,9 +1,10 @@
 body {
     height: 100vh;
     background-image: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)),
-    url("https://images.unsplash.com/photo-1559521783-1d1599583485?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1950&q=80");
+    url("https://images.unsplash.com/photo-1559521783-1d1599583485?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1950&q=80"); 
     background-size: cover;
     background-position: center;
+    background-color: #000;
     text-shadow: 0 0.05rem 0.1rem rgba(0, 0, 0, 0.5);
     box-shadow: inset 0 0 5rem rgba(0, 0, 0, 0.5);
 }
@@ -12,12 +13,21 @@ body {
     max-width: 60vw;
 }
 
+/* header {
+    z-index: 1;
+}
+
+main {
+    z-index: 1
+} */
+
 .nav-link {
     padding: 0.25rem 0;
     font-weight: 700;
     color: rgba(255, 255, 255, 0.5);
     margin-left: 1rem;
     border-bottom: 0.2rem solid transparent;
+    z-index: 1;
 }
 
 .nav-link:hover{
@@ -28,9 +38,83 @@ body {
 .nav-link.active {
     color: white;
     border-bottom-color: white;
+    padding-bottom: 1px;
 }
 
 .btn-secondary, .btn-secondary:hover{
     color: #333;
     text-shadow: none;
 } 
+
+/* old yelpcamp code */
+/* .slideshow { 
+    position: fixed;
+    width: 100%;
+    height: 100%;
+    top: 0;
+    left: 0;
+    z-index: 0;
+    list-style: none;
+    margin: 0;
+    padding: 0;
+}
+  
+  .slideshow li { 
+    width: 100%;
+    height: 100%;
+    position: absolute;
+    top: 0;
+    left: 0;
+    background-size: cover;
+    background-position: 50% 50%;
+    background-repeat: no-repeat;
+    opacity: 0;
+    z-index: 0;
+    animation: imageAnimation 50s linear infinite; 
+  }
+  
+  .slideshow li:nth-child(1) { 
+    background-image: url(https://images.unsplash.com/photo-1559521783-1d1599583485?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1950&q=80); 
+  }
+  .slideshow li:nth-child(2) { 
+    background-image: url(http://i.imgur.com/K3mPv14.jpg);
+    animation-delay: 5s; 
+  }
+  .slideshow li:nth-child(3) { 
+    background-image: url(http://i.imgur.com/emvhOnb.jpg);
+    animation-delay: 10s; 
+  }
+  .slideshow li:nth-child(4) { 
+    background-image: url(http://i.imgur.com/2LSMCmJ.jpg);
+    animation-delay: 15s; 
+  }
+  .slideshow li:nth-child(5) { 
+    background-image: url(http://i.imgur.com/TVGe0Ef.jpg);
+    animation-delay: 20s; 
+  }
+  .slideshow li:nth-child(6) { 
+    background-image: url(http://i.imgur.com/SBEmFpv.jpg);
+    animation-delay: 20s; 
+  } 
+  
+  @keyframes imageAnimation { 
+    0% { 
+      opacity: 0; 
+      animation-timing-function: ease-in;
+    }
+    10% {
+      opacity: 1;
+      animation-timing-function: ease-out;
+    }
+    20% {
+      opacity: 1
+    }
+    30% {
+      opacity: 0
+    }
+  } */
+  
+  /* Older browser support - .no-cssanimations class added by modernizr  */
+  /* .no-cssanimations .slideshow li {
+      opacity: 1;
+  } */
