--- a/views/campgrounds/index.ejs
+++ b/views/campgrounds/index.ejs
@@ -1,12 +1,13 @@
 <% layout("layouts/boilerplate")%>
-<div id="cluster-map"></div>
-<h1>All Campgrounds</h1>
+<h1 class ="mt-3">All Campgrounds</h1>
+<div id="cluster-map" class="mb-3"></div>
     <% for (let campground of campgrounds) { %>
         <div class="card mb-3">
             <div class="row">
                 <div class="col-md-4">
                     <%if(campground.images.length) {%>
-                    <img class=" img-fluid"src="<%=campground.images[0].url%>" alt="">
+                        <% const r = Math.floor(Math.random() * 10) %> 
+                    <img class="img-fluid" src="<%=campground.images[r].url%>" alt="">
                     <% } else { %> 
                         <img class=" img-fluid"src="https://res.cloudinary.com/dw3o86f8j/image/upload/v1619136149/YelpCamp/mcuiczu0lglmhzqhflbx.jpg" alt="">
                     <% } %> 
@@ -14,10 +15,10 @@
                 <div class="col-md-8">
                     <div class="card-body">
                         <h5 class="card-title"><%=campground.title%></h5>
-                        <p class="card-text"><%=campground.description%></p>
-                        <p class="card-text">
+                        <p class="card-text lead">
                             <small class="text-muted"><%=campground.location%></small>
                         </p>
+                        <p class="card-text"><%=campground.description%></p>
                         <a class="btn btn-primary" href="/campgrounds/<%=campground._id%>">View <%=campground.title%></a>
                     </div>
                 </div>
