--- a/views/campgrounds/show.ejs
+++ b/views/campgrounds/show.ejs
@@ -48,36 +48,41 @@
     </div>
     <div class="col-6">
       <div id='map'></div>
+      
+      <% if(!currentUser) {%> 
+      <h5 class="mb-2">Reviews</h5>
+      <p><a href="/login">Sign in</a> or <a href="/register">Register</a> to Leave a Review</p>
+      <% } %> 
       <% if (currentUser) {%> 
-      <h2 class="mb-2">Leave a Review</h2>
+      <h5 class="mt-3 mb-0">Leave a Review</h5>
           <form action="/campgrounds/<%=campground._id %>/reviews" class="mb-3 validated-form" method="POST" novalidate>
-            <div class="">
-              <label class="form-label mb-2"for="rating">Rating:</label>
-              <fieldset class="starability-basic mb-0 pb-0 border-bottom-0">
+            <div>
+              <label class="form-label mb-3"for="rating"></label>
+              <fieldset class="starability-basic py-3">
                 <input type="radio" id="no-rate" class="input-no-rate" name="review[rating]" value="1" checked
                     aria-label="No rating." />
                 <input type="radio" id="first-rate1" name="review[rating]" value="1" />
-                <label for="first-rate1" title="Terrible">1 star</label>
+                <label class="mb-0" for="first-rate1" title="Terrible">1 star</label>
                 <input type="radio" id="first-rate2" name="review[rating]" value="2" />
-                <label for="first-rate2" title="Not good">2 stars</label>
+                <label class="mb-0" for="first-rate2" title="Not good">2 stars</label>
                 <input type="radio" id="first-rate3" name="review[rating]" value="3" />
-                <label for="first-rate3" title="Average">3 stars</label>
+                <label class="mb-0" for="first-rate3" title="Average">3 stars</label>
                 <input type="radio" id="first-rate4" name="review[rating]" value="4" />
-                <label for="first-rate4" title="Very good">4 stars</label>
+                <label class="mb-0" for="first-rate4" title="Very good">4 stars</label>
                 <input type="radio" id="first-rate5" name="review[rating]" value="5" />
-                <label for="first-rate5" title="Amazing">5 stars</label>
-            </fieldset>
+                <label class="mb-0" for="first-rate5" title="Amazing">5 stars</label>
+              </fieldset>
             </div>
-            <div class="mb-3">
-              <label class="form-label mt-0 pt-0"for="body">Review Text:</label>
-              <textarea class="form-control" name="review[body]" id="body" cols="30" rows="3" required></textarea>
+            <div class="mb-3 mt-0">
+              <label class="form-label mt-0 pt-0"for="body"></label>
+              <textarea class="form-control" name="review[body]" id="body" cols="30" rows="4" placeholder="Tell us what you thought of the campground!" required></textarea>
               <div class="valid-feedback">Looks good!</div>
             </div>
-            <button class="btn btn-success">Submit</button>
+            <button class="btn btn-success mb-3">Submit</button>
           </form>
           <% } %> 
           <% for (let review of campground.reviews) { %>
-            <div class="card mb-3">
+            <div class="card mb-3" id="reviews">
               <div class="card-body">
                 <h5 class="card-title"><%=review.author.username%></h5>
 
