--- a/views/partials/navbar.ejs
+++ b/views/partials/navbar.ejs
@@ -15,6 +15,7 @@
           <a class="nav-link" href="/login">Login</a>
           <a class="nav-link" href="/register">Register</a>
           <% } else { %> 
+          <a class="nav-link disabled mr-3">Signed in as: <%=currentUser.username%></a>
           <a class="nav-link" href="/logout">Logout</a>
           <% }  %> 
         </div>
