--- a/views/campgrounds/index.ejs
+++ b/views/campgrounds/index.ejs
@@ -1,15 +1,15 @@
 <% layout("layouts/boilerplate")%>
-<h1 class ="mt-3">All Campgrounds</h1>
-<div id="cluster-map" class="mb-3"></div>
+    <h2 class ="mt-0">All Campgrounds</h2>
+    <div id="cluster-map" class="mb-3"></div>
     <% for (let campground of campgrounds) { %>
         <div class="card mb-3">
-            <div class="row">
+            <div class="row no-gutters">
                 <div class="col-md-4">
                     <%if(campground.images.length) {%>
                         <% const r = Math.floor(Math.random() * 10) %> 
                     <img class="img-fluid" src="<%=campground.images[r].url%>" alt="">
                     <% } else { %> 
-                        <img class=" img-fluid"src="https://res.cloudinary.com/dw3o86f8j/image/upload/v1619136149/YelpCamp/mcuiczu0lglmhzqhflbx.jpg" alt="">
+                        <img class="img-fluid"src="https://res.cloudinary.com/dw3o86f8j/image/upload/v1619136149/YelpCamp/mcuiczu0lglmhzqhflbx.jpg" alt="">
                     <% } %> 
                 </div>
                 <div class="col-md-8">
