--- a/public/stylesheets/home.css
+++ b/public/stylesheets/home.css
@@ -9,29 +9,33 @@ body {
     box-shadow: inset 0 0 5rem rgba(0, 0, 0, 0.5);
 }
 
-.cover-container {
-    max-width: 60vw;
-}
-
-/* header {
+header {
     z-index: 1;
 }
 
 main {
     z-index: 1
-} */
+}
+
+footer {
+  z-index: 1
+}
+
+.cover-container {
+  max-width: 60vw;
+}
 
 .nav-link {
     padding: 0.25rem 0;
     font-weight: 700;
-    color: rgba(255, 255, 255, 0.5);
+    color: white;
     margin-left: 1rem;
     border-bottom: 0.2rem solid transparent;
     z-index: 1;
 }
 
 .nav-link:hover{
-    color: rgba(255, 255, 255, 0.5);
+    color: white;
     border-bottom-color:rgba(255,255,255,0.5);
 }
 
@@ -46,8 +50,11 @@ main {
     text-shadow: none;
 } 
 
+span {
+  background-blend-mode: darken;
+}
 /* old yelpcamp code */
-/* .slideshow { 
+.slideshow { 
     position: fixed;
     width: 100%;
     height: 100%;
@@ -77,25 +84,22 @@ main {
     background-image: url(https://images.unsplash.com/photo-1559521783-1d1599583485?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1950&q=80); 
   }
   .slideshow li:nth-child(2) { 
-    background-image: url(http://i.imgur.com/K3mPv14.jpg);
-    animation-delay: 5s; 
+    background-image: url(https://i.imgur.com/emvhOnb.jpg);
+    animation-delay: 4s; 
   }
   .slideshow li:nth-child(3) { 
-    background-image: url(http://i.imgur.com/emvhOnb.jpg);
-    animation-delay: 10s; 
+    background-image: url(https://images.unsplash.com/photo-1542332213-1d277bf3d6c6?ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&ixlib=rb-1.2.1&auto=format&fit=crop&w=1350&q=80);
+    animation-delay: 8s; 
   }
   .slideshow li:nth-child(4) { 
-    background-image: url(http://i.imgur.com/2LSMCmJ.jpg);
-    animation-delay: 15s; 
+    background-image: url(https://res.cloudinary.com/dw3o86f8j/image/upload/v1619923413/YelpCamp/photo-1535576434247-e0f50b766399_s1rjgv.png);
+    animation-delay: 12s; 
   }
   .slideshow li:nth-child(5) { 
-    background-image: url(http://i.imgur.com/TVGe0Ef.jpg);
-    animation-delay: 20s; 
+    background-image: url(https://images.unsplash.com/photo-1495555694070-b0fe5bcd2576?ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&ixlib=rb-1.2.1&auto=format&fit=crop&w=1350&q=80);
+    animation-delay: 16s; 
   }
-  .slideshow li:nth-child(6) { 
-    background-image: url(http://i.imgur.com/SBEmFpv.jpg);
-    animation-delay: 20s; 
-  } 
+  
   
   @keyframes imageAnimation { 
     0% { 
@@ -115,6 +119,6 @@ main {
   } */
   
   /* Older browser support - .no-cssanimations class added by modernizr  */
-  /* .no-cssanimations .slideshow li {
+  .no-cssanimations .slideshow li {
       opacity: 1;
-  } */
+  } 
