--- a/views/home.ejs
+++ b/views/home.ejs
@@ -27,23 +27,22 @@
                 </nav>
             </div>
         </header>
-        <main class="px-3">
+        <main class="px-3 mt-3">
             <h1>YelpCamp</h1>
-            <p class="lead"> Welcome to YelpCamp! <br> Jump right in and explore our many campgrounds. <br>
+            <p class="lead mt-3 mb-4"> Welcome to YelpCamp! <br> Jump right in and explore our many campgrounds. <br>
                 Feel free to share some of your own and comment on others!</p>
             <a href="/campgrounds" class="btn btn-lg btn-secondary font-weight-bold border-white bg-white">View
                 Campgrounds</a>
         </main>
-        <!-- <ul class="slideshow">
+        <ul class="slideshow">
             <li></li>
             <li></li>
             <li></li>
             <li></li>
             <li></li>
-            <li></li> 
-        </ul> -->
+        </ul>
         <footer class="mt-auto text-white-50">
-            <p>&copy; 2020 YelpCamp</p>
+            <p>&copy; 2021 YelpCamp</p>
         </footer>
 
 
